# cricket-scraping

./: .gitignore  .pdm-python  2005-2011-2022-data.jsonl  README  pyproject.toml
Cricket/: exporters.py  items.py  settings.py
Cricket/spiders/: scorecard_spider.py
