[project]
name = "cricket-scraping"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Carlos Trejo", email = "37058445+CarlosGTrejo@users.noreply.github.com"},
]
dependencies = ["openpyxl>=3.1.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
